	* modules/pam_namespace/pam_namespace.8.xml: Document the mount_private
	option.

	* modules/pam_cracklib/pam_cracklib.c (str_lower): Make it no-op
	on NULL strings.
	(password_check): Guard for NULLs returned from memory allocation.

	* modules/pam_filter/pam_filter.c (process_args): Guard for error return
	from pam_get_user().

2011-05-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_timestamp/pam_timestamp.c (main): Remove unsused
	variable pretval.

	* modules/pam_stress/pam_stress.c (converse): **message is const.
	(stress_get_password): pmsg is const.
	(pam_sm_chauthtok): Likewise.
	* libpam/pam_item.c (pam_get_user): Make pmsg const and remove
	casts.

2011-05-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/pam_env.c (_pam_parse): Implement debug option.
	Based on patch by Tomas Mraz.

2011-05-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_listfile/pam_listfile.c (pam_sm_authenticate): quiet
	option has no argument, print no missing file if quiet is set
	[sf#3194930].

2011-05-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_failed): Don't
	abort with error if btmp file does not exist.

2011-03-21  Tomas Mraz  <tm@t8m.info>

	* modules/pam_unix/md5.c (MD5Final): Clear the whole ctx.

2011-03-18  Tomas Mraz  <tm@t8m.info>

	* modules/pam_namespace/md5.c (MD5Final): Clear the whole ctx.
	* modules/pam_namespace/pam_namespace.c (del_polydir): Guard for NULL poly.
	(protect_dir): Guard for -1 passing to close().
	(ns_setup): Likewise.
	(pam_sm_open_session): Correctly test for SELinux enabled flag.

2011-03-17  Tomas Mraz  <tm@t8m.info>

	* modules/pam_selinux/pam_selinux.c (config_context): Fix leak of type.
	(manual_context): Likewise.
	(context_from_env): Remove extraneous auditing in success case.

	* modules/pam_unix/support.c (_unix_run_helper_binary): Remove extra
	close() call.

2011-02-22  Tomas Mraz  <tm@t8m.info>

	* modules/pam_nologin/pam_nologin.8.xml: Add missing space.